@@ -105,6 +105,7 @@
 	* Fixed an issues resulting in T_PAAMAYIM_NEKUDOTAYIM when running on PHP 5.2
 	* Added an option to configure the type field used when grouping by type (markResultTypeBoundaries)
 	* Fixed an issue with initializeWithEmptyQuery not issueing the empty query
+	* Added feature #39080: Add ping time in status report
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
